first fix patch

--- a/src/MiNET/MiNET.BuilderBase/MiNET.BuilderBase.csproj
+++ b/src/MiNET/MiNET.BuilderBase/MiNET.BuilderBase.csproj
@@ -8,4 +8,8 @@
 		<ProjectReference Include="..\MiNET\MiNET.csproj" />
 	</ItemGroup>
 
+	<PropertyGroup>
+		<LangVersion>latest</LangVersion>
+	</PropertyGroup>
+
 </Project>
